# EKF-SLAM

./: CMakeLists.txt  README.md  package.xml
bags/: bagfile_filter_command
bags/driftbag/: circle.bag  circle2.bag  drift_11.bag  drift_112.bag  drift_6.bag  drift_62.bag  drift_622.bag
bags/gt_1/: bag42.bag
bags/gt_1/viso/: bag4_viso.bag  done.bag
bags/nightbags/: bag1.bag  bag2.bag  bag3.bag
bags/tablebags/: bag1.bag  bag2.bag  bag3.bag
config/: params_fused.yaml  params_libviso.yaml  params_lidar.yaml  params_zed.yaml
include/ekf_slam/: ekf_slam.h
launch/: ekf_slam_demo.launch  ekf_slam_fused.launch  ekf_slam_libviso2.launch  ekf_slam_lidar.launch
msg/: ObservationArray.msg  SingleObservation.msg
rviz/: rviz_conf_fused.rviz  rviz_conf_lidar.rviz  rviz_conf_viso.rviz  rviz_conf_zed.rviz
src/: ekf_slam.cpp  old.txt
